k8s/test-nginx/test-ingress-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ingress
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: test-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: test-ingress
spec:
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hello.k8s.dawo9889-homelab.ovh
    # Use the wildcard certificate secret produced above
    secretName: wildcard-k8s-dawo9889-homelab-ovh-tls
  rules:
  - host: hello.k8s.dawo9889-homelab.ovh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
